# A-small-Block-Game

./: CMakeLists.txt  LICENCE  PressChange.cpp  README.md
.cache/clangd/index/: main.cpp.7B6475D49A89132F.idx
07_texture_loading_and_rendering/: 07_texture_loading_and_rendering.cpp  readme.txt
data/: setting.txt  user_data.txt
src/: Button.cpp  Button.h  MainWindow.cpp  MainWindow.h  PressChange.cpp  Shape.cpp  Shape.h  TextInput.cpp  TextInput.h  constant.cpp  main.cpp  main_.cpp  user.h
